Removed coming soon

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Paducah Porch Goose - Coming Soon" description="Paducah Porch Goose - Coming Soon">
+<Layout title="Paducah Porch Goose" description="Paducah Porch Goose">
   <div class="min-h-[calc(100vh-80px)] bg-gradient-to-br from-gray-50 to-gray-100 dark:from-gray-900 dark:to-gray-800 flex items-center justify-center px-4">
     <div class="text-center max-w-2xl mx-auto">
       <div class="mb-8 sm:mb-12">
