Remove  from about us text

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -29,9 +29,8 @@ import Layout from '../layouts/Layout.astro';
         </p>
 
         <p class="text-lg sm:text-xl md:text-2xl text-gray-700 dark:text-gray-300 leading-relaxed mb-6">
-          While you might come to Paducah for a goose, we hope you stay and enjoy the city as
-          well. You may even find that a lot of the local businesses around here have become
-          Porch Goose fans as well!
+          While you might come to Paducah for a goose, we hope you stay and enjoy the city.
+          You may even find that a lot of the local businesses around here have become Porch Goose fans as well!
         </p>
 
         <p class="text-lg sm:text-xl md:text-2xl text-gray-700 dark:text-gray-300 leading-relaxed mb-6">
