--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -4,7 +4,7 @@ import Layout from '../layouts/Layout.astro';
 const COLOR_APPT_ONLY = '#3b82f6'
 const COLOR_CLOSED = '#ff0000'
 const COLOR_OPEN = '#10b981'
-
+/*
 const events = [
   {
     title: 'Closed',
@@ -26,6 +26,17 @@ const events = [
     end: '2025-08-11',
     backgroundColor: COLOR_OPEN,
     borderColor: COLOR_OPEN
+  }
+]
+*/
+
+const events = [
+  {
+    title: 'Appointment Only',
+    start: '2025-08-11',
+    end: '2025-08-23',
+    backgroundColor: COLOR_APPT_ONLY,
+    borderColor: COLOR_APPT_ONLY
   }
 ]
 ---
