--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -37,6 +37,20 @@ const events = [
     end: '2025-08-23',
     backgroundColor: COLOR_APPT_ONLY,
     borderColor: COLOR_APPT_ONLY
+  },
+  {
+    title: 'Open 9am - 2pm',
+    start: '2025-08-23',
+    end: '2025-08-24',
+    backgroundColor: COLOR_OPEN,
+    borderColor: COLOR_OPEN
+  },
+  {
+    title: 'Open 11am - 3pm',
+    start: '2025-08-24',
+    end: '2025-08-25',
+    backgroundColor: COLOR_OPEN,
+    borderColor: COLOR_OPEN
   }
 ]
 ---
