--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -32,26 +32,19 @@ const events = [
 
 const events = [
   {
-    title: 'Appointment Only',
-    start: '2025-08-11',
-    end: '2025-08-23',
-    backgroundColor: COLOR_APPT_ONLY,
-    borderColor: COLOR_APPT_ONLY
+    title: 'Closed',
+    start: '2025-08-30',
+    end: '2025-09-01',
+    backgroundColor: COLOR_CLOSED,
+    borderColor: COLOR_CLOSED
   },
   {
-    title: 'Open 9am - 2pm',
-    start: '2025-08-23',
-    end: '2025-08-24',
+    title: 'Open 9am - 1pm',
+    start: '2025-09-01',
+    end: '2025-09-02',
     backgroundColor: COLOR_OPEN,
     borderColor: COLOR_OPEN
   },
-  {
-    title: 'Open 11am - 3pm',
-    start: '2025-08-24',
-    end: '2025-08-25',
-    backgroundColor: COLOR_OPEN,
-    borderColor: COLOR_OPEN
-  }
 ]
 ---
 
