--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -32,18 +32,32 @@ const events = [
 
 const events = [
   {
-    title: 'Closed',
-    start: '2025-08-30',
-    end: '2025-09-01',
-    backgroundColor: COLOR_CLOSED,
-    borderColor: COLOR_CLOSED
+    title: 'By appt only',
+    start: '2025-09-02',
+    end: '2025-09-06',
+    backgroundColor: COLOR_APPT_ONLY,
+    borderColor: COLOR_APPT_ONLY
   },
   {
-    title: 'Open 9am - 1pm',
-    start: '2025-09-01',
-    end: '2025-09-02',
+    title: 'Open 9am - 2pm',
+    start: '2025-09-06',
+    end: '2025-09-07',
     backgroundColor: COLOR_OPEN,
     borderColor: COLOR_OPEN
+  },
+  {
+    title: 'Open 11am - 3pm',
+    start: '2025-09-07',
+    end: '2025-09-08',
+    backgroundColor: COLOR_OPEN,
+    borderColor: COLOR_OPEN
+  },
+  {
+    title: 'By appt only',
+    start: '2025-09-08',
+    end: '2025-09-13',
+    backgroundColor: COLOR_APPT_ONLY,
+    borderColor: COLOR_APPT_ONLY
   },
 ]
 ---
