--- a/src/pages/calendar.astro
+++ b/src/pages/calendar.astro
@@ -30,32 +30,34 @@ const events = [
 ]
 */
 
+let start_date = new Date().toISOString().split('T')[0];
+
 const events = [
   {
     title: 'By appt only',
-    start: '2025-09-02',
-    end: '2025-09-06',
+    start: start_date,
+    end: '2025-09-13',
     backgroundColor: COLOR_APPT_ONLY,
     borderColor: COLOR_APPT_ONLY
   },
   {
     title: 'Open 9am - 2pm',
-    start: '2025-09-06',
-    end: '2025-09-07',
+    start: '2025-09-13',
+    end: '2025-09-14',
     backgroundColor: COLOR_OPEN,
     borderColor: COLOR_OPEN
   },
   {
     title: 'Open 11am - 3pm',
-    start: '2025-09-07',
-    end: '2025-09-08',
+    start: '2025-09-14',
+    end: '2025-09-15',
     backgroundColor: COLOR_OPEN,
     borderColor: COLOR_OPEN
   },
   {
     title: 'By appt only',
-    start: '2025-09-08',
-    end: '2025-09-13',
+    start: '2025-09-15',
+    end: '2025-09-20',
     backgroundColor: COLOR_APPT_ONLY,
     borderColor: COLOR_APPT_ONLY
   },
